--- a/ds.conf
+++ b/ds.conf
@@ -1,4 +1,6 @@
 [DS]
-host = https://app.deepsecurity.trendmicro.com/api # or your local DSM
+host = https://app.deepsecurity.trendmicro.com/api 
+#or your local DSM
 
-api_key = # Your api key
+api_key = 
+#Your api key
